# Blender_mcp

./: .gitattributes  .gitignore  .importlinter  LICENSE  Makefile  README.md  create_release_zip.py  pyproject.toml  stdio_bridge.py
blender_mcp/: __init__.py  __main__.py  __version__.py  dispatcher.py
blender_mcp/core/: __init__.py  animation_advanced.py  blender50_features.py  bmesh_operations.py  compositor_modifier.py  constants.py  context.py  context_manager_v3.py  context_surrogate.py  diagnostics.py  enhanced_recovery.py  enums.py  error_handling.py  error_protocol.py  event_ledger.py  exceptions.py  execution_engine.py  execution_engine.pyi  execution_safety.py  export_pipeline.py  fuzzy_matcher.py  geometry_nodes_advanced.py  headless_mode.py  intent_router.py  job_manager.py  logging_config.py  object_identity.py  object_lifecycle.py  operator_safety.py  parameter_validator.py  property_resolver.py  protocol.py  reliability.py  render_eevee_next.py  resolver.py  response_builder.py  security.py  semantic_memory.py  smart_mode_manager.py  state_mirror.py  (+7 more)
blender_mcp/handlers/: __init__.py  base_handler.py  get_local_transforms.py  hunyuan_handler.py  hyper3d_handler.py  manage_advanced_batch.py  manage_agent_context.py  manage_ai_tools.py  manage_animation.py  manage_animation_advanced.py  manage_animation_slots.py  manage_bake.py  manage_batch.py  manage_bmesh_edit.py  manage_camera.py  manage_cloud_render.py  manage_collections_advanced.py  manage_compositing.py  manage_compositor_modifier.py  manage_constraints.py  manage_drivers.py  manage_eevee_next.py  manage_export.py  manage_export_pipeline.py  manage_geometry_nodes.py  manage_geometry_nodes_advanced.py  manage_headless_mode.py  manage_history.py  manage_inspection.py  manage_jobs.py  manage_light.py  manage_materials.py  manage_mocap.py  manage_modeling.py  manage_objects.py  manage_physics.py  manage_procedural.py  manage_profiling.py  manage_render_optimization.py  manage_rendering.py  (+15 more)
blender_mcp/utils/: __init__.py  asset_loader.py  error_handler.py  math.py  path.py  path_validator.py
docs/: ARCHITECTURE.md
scripts/: SCRIPTS.md  count_tools.py  inspect_tools.py  remove_unused_ignores.py  sync_version.py  test_blender_imports.py
scripts/quality/: __init__.py  check_forbidden.py  check_handler_completeness.py  check_handler_imports.py  check_schemas.py  check_tool_groups.py  check_version.py  checks.py  lint_imports.py  run_all_checks.py  run_checks.py  validate_tool_runtime.py
tests/: TESTS.md
tests/integration/: conftest.py  test_incident_replay.py  test_incident_replay_p11.py  test_incident_replay_p11_mock.py
tests/unit/: test_dispatch_routing.py  test_dispatcher_deep.py  test_engine.py  test_error_protocol.py  test_essential_tools.py  test_execution_engine.py  test_intent_router.py  test_job_manager.py  test_manage_history.py  test_parameter_validator.py  test_protocol.py  test_registry_completeness.py  test_response_builder.py  test_scene_graph_geo_center.py  test_security.py  test_semantic_memory.py  test_smoke.py
